--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.4",
     "@mui/styled-engine-sc": "^5.8.0",
+    "i18next": "^21.8.13",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
+    "i18next-xhr-backend": "^3.2.2",
+    "js-cookie": "^3.0.1",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^11.18.0",
     "react-icons": "^4.4.0",
     "react-modern-drawer": "^1.1.1",
     "react-scroll": "^1.8.7",
